kubernetes/apps/k8s/home-automation/home-assistant/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  ingressClassName: nginx
  rules:
  - host: "hass.nucstack.com"
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "hass.nucstack.com"
